\name{NEWS}
\title{News for Package \pkg{sasLM}}

\section{Version 0.10.0 (2023-11-19)}{
  \itemize{
    \item{Functions for group sequential design (seqBound, CumAlpha, PocockBound, Drift, ExitP, seqCI) are added.}
    \item{If the matrix dimension for Dunnett test is less than 11, Miwa algorithm is used for multi-variate t distribution.}
  }
}

\section{Version 0.9.12 (2023-09-08)}{
  \itemize{
    \item{RRinv revised}
  }
}

\section{Version 0.9.11 (2023-08-09)}{
  \itemize{
    \item{RDmn1 can handle more extreme cases.}
  }
}

\section{Version 0.9.10 (2023-07-10)}{
  \itemize{
    \item{Typo correction}
  }
}

\section{Version 0.9.9 (2023-06-05)}{
  \itemize{
    \item{TTEST, mtest, tmtest, ztest, vtest functions are added.}
    \item{Every time just before calling mvtnorm::pmvt, mvtnorm::qmvt, set.seed(5) is called.}
  }
}

\section{Version 0.9.8 (2023-05-05)}{
  \itemize{
    \item{RanTest with no fixed effect and only 1 random effect return correct result.}
    \item{T3test supports H and E options}
    \item{LIbin, LIpois, LInorm, and RDLI are removed, and will be included in a separate package.}
  }
}

\section{Version 0.9.7 (2023-04-05)}{
  \itemize{
    \item{Skewness function revised.}
    \item{Bugs of some cases at RDmn1, RDmn, ORmn1, ORmn are fixed.}
    \item{LIbin, LIpois, LInorm, and RDLI are introduced.}
  }
}

\section{Version 0.9.6 (2023-03-06)}{
  \itemize{
    \item{RanTest function added for test with random effect.}
    \item{T3MS will be deprecated soon. Use EMS instead.}
    \item{SLICE function's options are renamed.}
    \item{Typos in manual are corrected.}
  }
}

\section{Version 0.9.5 (2023-02-06)}{
  \itemize{
    \item{GLM, REG, aov1, aov2, aov3 functions return yhat and residuals with Resid=TRUE option.}
    \item{aov1, aov2, aov3 functions return beta coefficients with BETA=TRUE option.}
    \item{T3test is significantly improved for complex cases.}
    \item{RDmn handles more extreme values.}