@@ -1,5 +1,5 @@
 Package: sasLM
-Version: 0.10.0
+Version: 0.10.1
 Title: 'SAS' Linear Model
 Description: This is a core implementation of 'SAS' procedures for linear models - GLM, REG, ANOVA, TTEST, FREQ, and UNIVARIATE. Some R packages provide type II and type III SS. However, the results of nested and complex designs are often different from those of 'SAS.' Different results does not necessarily mean incorrectness. However, many wants the same results to SAS. This package aims to achieve that. 
              Reference: Littell RC, Stroup WW, Freund RJ (2002, ISBN:0-471-22174-0).
@@ -13,5 +13,5 @@ License: GPL-3
 Repository: CRAN
 URL: https://cran.r-project.org/package=sasLM
 NeedsCompilation: no
-Packaged: 2023-11-19 09:45:31 UTC; Kyun-SeopBae
-Date/Publication: 2023-11-19 10:00:02 UTC
+Packaged: 2024-01-25 00:40:32 UTC; Kyun-SeopBae
+Date/Publication: 2024-01-25 01:10:02 UTC
